# TaichiExperiments

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sh  publishDocs.sh  syncTemplate.sh
cmake/macros/: Private.cmake  Public.cmake
docs/: Doxyfile.in
src/: CMakeTemplate.md
src/exampleProgram/: CMakeLists.txt  main.cpp
src/exampleSharedLibrary/: CMakeLists.txt  add.cpp  add.h
src/exampleSharedLibrary/tests/: CMakeLists.txt
